testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/Issue163.adl
CONTEXT Issue163 IN ENGLISH

RELATION  r[A*A]
RELATION  s[B*B]

POPULATION A CONTAINS [ 3, 6, 42 ]
-- This example should fail, because A and B are in the same typology, and B has TYPE INTEGER. 
-- The target concept of an INTERFACE's expresion must be of type OBJECT (which is the default)
CLASSIFY B ISA A
REPRESENT B TYPE INTEGER

INTERFACE Issue163 : V[SESSION*A]
 BOX [ ie : I
     , r  : r
     , s  : s
     ]
ENDCONTEXT